--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,18 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.6.0</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>co.elastic.clients</groupId>
+		    <artifactId>elasticsearch-java</artifactId>
+		    <version>8.19.3</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.elasticsearch.client</groupId>
+		    <artifactId>elasticsearch-rest-client</artifactId>
+		    <version>8.19.3</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.mysql</groupId>
