--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=fitpass
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/fitpass?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-#spring.datasource.password=Lavor321
-spring.datasource.password=root
+spring.datasource.password=Lavor321
+#spring.datasource.password=root
 
 
 spring.elasticsearch.uris=http://localhost:9200
