--- a/pom.xml
+++ b/pom.xml
@@ -57,9 +57,15 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>org.elasticsearch</groupId>
+			<artifactId>elasticsearch</artifactId>
+			<version>8.13.3</version>
+		</dependency>
+		
+		<dependency>
 		    <groupId>co.elastic.clients</groupId>
 		    <artifactId>elasticsearch-java</artifactId>
-		    <version>8.19.3</version>
+		    <version>8.13.3</version>
 		</dependency>
 		
 		<dependency>
@@ -70,7 +76,13 @@
 		<dependency>
 		    <groupId>org.elasticsearch.client</groupId>
 		    <artifactId>elasticsearch-rest-client</artifactId>
-		    <version>8.19.3</version>
+		    <version>8.13.3</version>
+		</dependency>
+		
+		<dependency>
+		  <groupId>org.apache.pdfbox</groupId>
+		  <artifactId>pdfbox</artifactId>
+		  <version>2.0.29</version>
 		</dependency>
 
 		<dependency>
