--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,22 @@ spring.datasource.username=root
 spring.datasource.password=Lavor321
 #spring.datasource.password=root
 
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=false
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.open-in-view=false
+
+
+#spring.elasticsearch.uris=http://localhost:9200
+#spring.elasticsearch.username=elastic
+#spring.elasticsearch.password=
+
+minio.url=http://localhost:9000
+minio.access-key=ROOTUSER
+minio.secret-key=CHANGEME123
+minio.bucket-name=bucket
 
 spring.elasticsearch.uris=http://localhost:9200
-spring.elasticsearch.username=elastic
+spring.elasticsearch.username=
 spring.elasticsearch.password=
