--- a/pom.xml
+++ b/pom.xml
@@ -56,16 +56,16 @@
 			<version>0.6.0</version>
 		</dependency>
 		
-		<dependency>
+		<!--<dependency>
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch</artifactId>
 			<version>8.13.3</version>
-		</dependency>
+		</dependency>-->
 		
 		<dependency>
 		    <groupId>co.elastic.clients</groupId>
 		    <artifactId>elasticsearch-java</artifactId>
-		    <version>8.13.3</version>
+		    <!--<version>8.13.3</version>-->
 		</dependency>
 		
 		<dependency>
@@ -76,7 +76,7 @@
 		<dependency>
 		    <groupId>org.elasticsearch.client</groupId>
 		    <artifactId>elasticsearch-rest-client</artifactId>
-		    <version>8.13.3</version>
+		    <!--<version>8.13.3</version>-->
 		</dependency>
 		
 		<dependency>
