--- a/src/main/resources/elasticsearch/facility-index-settings.json
+++ b/src/main/resources/elasticsearch/facility-index-settings.json
@@ -63,7 +63,13 @@
       "name": {
         "type": "text",
         "analyzer": "serbian_analyzer",
-        "search_analyzer": "serbian_analyzer"
+        "search_analyzer": "serbian_analyzer",
+        "fields": {
+          "keyword": {
+            "type": "keyword",
+            "ignore_above": 256
+          }
+        }
       },
       "description": {
         "type": "text",
