--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,11 @@ spring.application.name=fitpass
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/fitpass?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-#spring.datasource.password=Lavor321
-spring.datasource.password=root
+spring.datasource.password=Lavor321
+
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+#spring.datasource.password=root
 
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=false
@@ -20,7 +23,7 @@ spring.datasource.password=root
 minio.url=http://localhost:9000
 minio.access-key=ROOTUSER
 minio.secret-key=CHANGEME123
-minio.bucket-name=bucket
+minio.bucket=fitpass-bucket
 
 spring.elasticsearch.uris=http://localhost:9200
 spring.elasticsearch.username=
